# wordlist

./: .gitignore  .travis.yml  README.md  Wordlist.hs  cabal.project  flake.nix  hie.yaml  package.yaml  stack.yaml  wordlist.cabal
.github/workflows/: test.yml
configurations/: ghc-8.10.project  ghc-8.2.project  ghc-8.4.project  ghc-8.6.project  ghc-8.8.project  ghc-9.0.project  ghc-9.2.project
src/Wordlist/: Args.hs
wordlist/: changelog.md  license.txt  package.yaml  readme.md  wordlist.cabal
wordlist/exe/: wordlist.hs
wordlist/src/Wordlist/: Args.hs
