name:    wordlist
version: 0.1.0.0

license: Apache-2.0

cabal-version: >= 1.10
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall

  build-depends:
      base >= 4.10 && < 4.12
    , optparse-applicative
    , text

  exposed-modules:
      Wordlist.Args

executable wordlist
  default-language: Haskell2010
  main-is: Wordlist.hs
  hs-source-dirs: ./.
  ghc-options: -Wall

  build-depends:
      base >= 4.10 && < 4.12
    , optparse-applicative
    , text
    , base
    , MonadRandom
    , text
    , vector
    , wordlist
