cabal-version: 3.0

name:     wordlist
version:  0.1.0.8
synopsis: Command-line tool to get random words
category: Text, Application

description:
    A command-line application that outputs a random list
    of words, designed to generate memorable passwords.

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin <ch.martin@gmail.com>

homepage: https://codeberg.org/chris-martin/wordlist

license: Apache-2.0
license-file: license.txt

extra-source-files: *.md

common base
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base ^>= 4.20
      , optparse-applicative ^>= 0.18
      , text ^>= 2.1

library
    import: base
    hs-source-dirs: src
    exposed-modules: Wordlist.Args

executable wordlist
    import: base
    main-is: wordlist.hs
    hs-source-dirs: exe

    build-depends:
        MonadRandom ^>= 0.6
      , vector ^>= 0.13
      , wordlist
